# kanjidic_db

./: .gitignore  Cargo.toml  README.md  template.sql
src/: dictionary.rs  main.rs
