[package]
name = "kanjidic_to_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.27.1"
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.93"
